fix: input box misaligned in add-vertices page (#364)

--- a/hubble-fe/src/components/graph-management/data-analyze/DataAnalyze.less
+++ b/hubble-fe/src/components/graph-management/data-analyze/DataAnalyze.less
@@ -764,14 +764,14 @@
       }
 
       & > div:first-child {
-        flex-basis: 25%;
+        flex-basis: 35%;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
 
       & > div:last-child {
-        flex-basis: 75%;
+        flex-basis: 65%;
       }
 
       &-disabled {
